--- a/templates/p_inicio.html
+++ b/templates/p_inicio.html
@@ -126,9 +126,8 @@
                         {{ formatted_date }}
                     </div>
 
-                    <!-- Update the modal structure in p_inicio.html -->
                     <div class="modal fade" id="foodDetailModal" tabindex="-1" role="dialog" aria-labelledby="foodDetailModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-lg" role="document"> <!-- Use modal-lg or modal-xl for larger size -->
+                        <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="foodDetailModalLabel">Detalle Comida</h5>
@@ -146,7 +145,22 @@
                         </div>
                     </div>
 
-                    
+                    <div class="modal fade" id="foodEditModal" tabindex="-1" role="dialog" aria-labelledby="foodEditModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="foodEditModalLabel">Editar Comida</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <!-- Aquí cargaremos el formulario de edición vía AJAX -->
+                              <div class="text-center py-5"><i class="fas fa-spinner fa-spin"></i> Cargando...</div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>                    
 
                     <div class="row">
                         <div class="col-lg-12">
@@ -172,7 +186,7 @@
                                                 </div>
                                                 <div>
                                                     <a href="#" class="btn btn-sm btn-outline-primary" data-toggle="modal" data-target="#foodDetailModal" data-date="{{ comida.fecha_ini.strftime('%Y-%m-%d %H:%M:%S') }}">Ver</a>
-                                                    <a href="{{ url_for('paciente.updateFood', id=get_pac.id_paciente, date=comida.fecha_ini) }}" class="btn btn-sm btn-outline-warning">Editar</a>
+                                                    <a href="#" class="btn btn-sm btn-outline-warning" data-toggle="modal" data-target="#foodEditModal" data-date="{{ comida.fecha_ini.strftime('%Y-%m-%d %H:%M:%S') }}">Editar </a>
                                                     <a href="{{ url_for('paciente.deleteFood', id=get_pac.id_paciente, date=comida.fecha_ini) }}" class="btn btn-sm btn-outline-danger">Eliminar</a>
                                                 </div>
                                             </li>
@@ -257,6 +271,39 @@
                 }
             });
         });
+
+        $('#foodEditModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget);
+            var date   = button.data('date');
+            var modal  = $(this);
+
+            // Mientras carga, dejamos el spinner
+            modal.find('.modal-body').html('<div class="text-center py-5"><i class="fas fa-spinner fa-spin"></i> Cargando...</div>');
+
+            $.ajax({
+            url: "{{ url_for('paciente.updateFood', id=get_pac.id_paciente, date='__DATE__') }}"
+                    .replace('__DATE__', encodeURIComponent(date)),
+            type: "GET",
+            data: { modal: 1 },  // indicamos que queremos sólo el fragmento
+            success: function(html) {
+                modal.find('.modal-body').html(html);
+            },
+            error: function() {
+                modal.find('.modal-body').html('<p class="text-danger">Error cargando el formulario.</p>');
+            }
+            });
+        });
+
+            $(document).on('click', '.remove-alimento', function() {
+                $(this).closest('li').remove();
+            });
+
+            $('#add-alimento').click(function() {
+                var newAlimento = $('#alimentos-select').clone();
+                newAlimento.attr('id', 'alimentos-select');
+                newAlimento.find('option:first').prop('selected', true);
+                $('#alimentos').append(newAlimento);
+            });
     </script>    
 </body>
 
